# K1D-RoboCup-RMRC-2023

./: Insper Dynamics - Tela de Controle do K1D.fig  README.md  erros e soluções.xlsx  how_to_run.md  opencv_test.py  opticalflowdensity_test.py  run.sh  run2.sh  run_autonomous.md
3D models/: Body10C1_obj.prt  Body10C2_obj.prt  Body10C3_obj.prt  Body10C4_obj.prt  Body10C5_obj.prt  Body10C6_obj.prt  Body10_obj.prt  Body112_obj.prt  Body11C1_obj.prt  Body11C2_obj.prt  Body11C3_obj.prt  Body11C4_obj.prt  Body11C5_obj.prt  Body11C6_obj.prt  Body11_obj.prt  Body12C1_obj.prt  Body12C2_obj.prt  Body12C3_obj.prt  Body12C4_obj.prt  Body12C5_obj.prt  Body12C6_obj.prt  Body12_obj.prt  Body13C1_obj.prt  Body13C2_obj.prt  Body13C3_obj.prt  Body13C4_obj.prt  Body13C5_obj.prt  Body13C6_obj.prt  Body13_obj.prt  Body14C1_obj.prt  Body14C2_obj.prt  Body14C3_obj.prt  Body14C4_obj.prt  Body14C5_obj.prt  Body14_obj.prt  Body15C1_obj.prt  Body15C2_obj.prt  Body15C3_obj.prt  Body15C4_obj.prt  Body15C5_obj.prt  (+665 more)
Arena/: Clear v3.f3d  Clear.stl  Clear_floor.stl  Continuous ramps v1.f3d  Continuous_ramps.stl  Continuous_ramps_floor.stl  Elevated ramps v1.f3d  Elevated_ramps.stl  Elevated_ramps_floor.stl  Hurdles v1.f3d  Hurdles.stl  Hurdles_floor.stl  SandGravelMulch v1.f3d  SandGravelMulch_floor.stl  Sand_gravel_mulch.stl  Stepfields v1.f3d  Stepfields_floor.stl  walls.stl
Bash Dependency Installer/: catkin.sh  install.sh
Main software/: CMakeLists.txt  Claw.h  Gamepad_controller.h  Hazmat_detection.h  K1D_MAIN.cpp  Motion_detection.h  QR_read.h  ROS_communication.h  Thermal.h  Thermal_gas.h
(+4630 files in other folders)
